css media queries logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header>
         <nav id="navbar" class="pos1">
-            <h3>startstech</h3>
+            <h3 class="logo">startstech</h3>
+            <h3 class="mini-logo">S</h3>
             <ul>
                 <li><a href="#">home</a></li>
                 <li><a href="#servicios">servicios</a></li>
