--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <title>techstrat</title>
 </head>
 <body>
@@ -262,7 +261,7 @@
             </div>
             <div class="box-blog"> 
                 <p>Seguinos en nuestro <a href="http://www.3ops.com/" target="_blank" >blog</a>, donde actualizamos noticias sobre infraestuctura y seguridad</p>
-                <a href="http://www.3ops.com/" target="_blank" ><iframe src="http://www.3ops.com/"></iframe></a>
+                <a href="https://www.3ops.com/" target="_blank" ><iframe src="http://www.3ops.com/"></iframe></a>
              </div>
         </div>
     </section>
