--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                 <span class="linea"></span>
             </div>
             <div class="box-blog"> 
-                <p>Seguinos en nuestro <a href="http://www.3ops.com/" target="_blank" >blog</a>, donde actualizamos noticias sobre infraestuctura y seguridad</p>
-                <a href="https://www.3ops.com/" target="_blank" ><iframe src="http://www.3ops.com/"></iframe></a>
+                <p>Seguinos en nuestro <a href="https://www.3ops.com/" target="_blank" >blog</a>, donde actualizamos noticias sobre infraestuctura y seguridad</p>
+                <a href="http://www.3ops.com/" target="_blank" ><iframe src="https://www.3ops.com/"></iframe></a>
              </div>
         </div>
     </section>
@@ -271,6 +271,10 @@
                 <div class="titulo-redes">
                     <h2>Encontranos</h2>
                     <span class="linea"></span>
+                    <div class="startstech">
+                        <h3 class="logo">startstech</h3>
+                    </div>
+                    <span>Sabemos de Start Ups, Sabemos de Tecnología</span>
                 </div>
                 <div class="social-icon">
                     <div>
